<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">计算器</string>
    <string name="action_settings">Settings</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="night">9</string>
    <string name="point">.</string>
    <string name="ac">AC</string>
    <string name="del">DEL</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="product">×</string>
    <string name="divisor">÷</string>
    <string name="equal">=</string>
    
</resources>
